# dms-backend

./: .gitignore  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_SUMMARY.md  Dockerfile  README.md  SUPERVISOR_SEPARATION_SUMMARY.md  clear_and_populate_students.py  compose.yml  init_collections.py  pyproject.toml  report.html  requirements.txt  run.sh  setup_student_logins.py  student_manager.py  student_pin_manager.py  supervisor_assignment.py  supervisor_collection_setup.py  supervisor_manager.py  test_assignment.py  test_student_logins.py  uvicorn.out  verify_supervisor_separation.py
app/: main.py
app/api/v1/routes/: auth.py  (+36 more)
app/controllers/: academic_years.py  activity_logs.py  announcements.py  communications.py  complaints.py  defense_schedules.py  deliverables.py  enhanced_supervisor_interests.py  fypcheckins.py  fyps.py  groups.py  lecturer_project_areas.py  lecturers.py  logins.py  programs.py  project_areas.py  projects.py  recent_activities.py  reminders.py  student_interests.py  students.py  submissions.py  supervisors.py
app/core/: config.py  database.py  websocket_manager.py
app/schemas/: academic_years.py  activity_logs.py  announcements.py  base.py  communications.py  complaints.py  defense_schedules.py  deliverables.py  enhanced_supervisor_interests.py  fypcheckins.py  fyps.py  gateway.py  groups.py  lecturer_project_areas.py  lecturers.py  logins.py  models.py  programs.py  project_areas.py  projects.py  recent_activities.py  reminders.py  student_interests.py  students.py  submission_files.py  submissions.py  supervisors.py  token.py  vector_stores.py
(+2 files in other folders)
