[tool.poetry]
name = "dms-backend"
version = "0.1.0"
description = ""
authors = ["daquiver <cabrokwa11@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"
python-jose = "^3.4.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytz = "^2025.1"
motor = "^3.7.0"
pymongo = "^4.13.2"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
